# target-o-meter

./: .env.example  .gitignore  .importlinter  AGENTS.md  conftest.py  draft.md  manage.py  pyproject.toml
.github/workflows/: uat.yml
context/archive/2026-07-19-cv-service-boundary/: change.md  plan-brief.md  plan.md
context/changes/bootstrap-verification/: verification.md
context/changes/cv-service-boundary/: change.md  frame.md  plan.md  research-ai-detection.md  research-blob-detection.md  research-llm-pivot.md  research.md
context/changes/cv-service-boundary/reviews/: impl-review.md
context/changes/oauth-roles-scaffold/: change.md  plan-brief.md  plan.md  research.md
context/changes/oauth-roles-scaffold/reviews/: plan-review.md
context/deployment/: deploy-plan.md
context/foundation/: infrastructure.md  lessons.md  prd.md  roadmap.md  shape-notes.md  tech-stack.md
cv/: README.md  blob_detect.py  detect.py  detector_base.py  eval.py  eval_blob.py  feature_probe.py  gt.py  mock_detector.py  normalize.py  pipeline.py  run_eval.py  run_pipeline.py
cv/approaches/full_pipeline/: __init__.py  pipeline.py  run.py
cv/approaches/fused/: __init__.py  adaptive_frame.py  pipeline.py  refine.py  run.py
cv/approaches/iteredge/: edges.py  localize.py  model.py  normalize.py  optimize.py  pipeline.py  run.py  warp.py
cv/approaches/multiring/: __init__.py  detect_rings.py  homography.py  localize.py  normalize.py  pipeline.py  run.py  warp.py
cv/approaches/singleellipse/: blackdisc.py  localize.py  normalize.py  pipeline.py  run.py  warp.py
cv/langchain_detector/: __init__.py  client.py  detector.py  prompt.py  schema.py
cv/phase3_spike/: __init__.py  client.py  compare.py  metadata.py  prompt.py  run.py  schema.py  viz.py
cv/tmp/: probe_46.py  probe_46_blackdisc.py  probe_46_blackhat.py  probe_46_configs.py  probe_46_features.py  probe_46_mf.py  probe_46_verify.py  probe_calibrate_radius.py  probe_feature_stack.py  probe_global_features.py  probe_ring_calibration.py  probe_ring_calibration_v2.py  probe_ring_calibration_v3.py  probe_ring_calibration_v4.py  probe_ring_calibration_v5.py  probe_ring_calibration_v6.py  probe_ring_calibration_v7.py  probe_ring_calibration_v8.py  pyramid_wavelet_survey.md  ring_detection_survey.md
src/: manage.py
src/bff/: api.py  oauth.py  urls.py  views.py
src/bff/routers/: auth_routes.py  owner_routes.py  session_routes.py
src/domains/core/: apps.py  dtos.py  models.py  ports.py  services.py  test_utils.py
src/domains/identity/: README.md  admin.py  apps.py  dtos.py  models.py  ports.py  services.py  test_utils.py
src/domains/identity/migrations/: 0001_initial.py
src/domains/identity/tests/: conftest.py  test_services.py
src/domains/vision/: README.md  __main__.py  apps.py  dtos.py  models.py  ports.py  services.py  test_utils.py
src/domains/vision/detectors/: __init__.py  detected_hole.py  detection_result.py  factory.py  google_ai_studio_detector.py  google_studio_vlm_client.py  mock_detector.py  ollama_detector.py  ollama_vlm_client.py  prompt.py  schema.py  vlm_client.py
src/domains/vision/eval/: __init__.py  magenta_gt.py  metadata_loader.py  score_comparison.py
src/domains/vision/geometry/: __init__.py  adaptive_frame_sizer.py  black_disc_calibrator.py  calibration.py  circular_points_rectifier.py  classical_stages.py  coordinate_frame.py  edge_potential.py  geometry_pipeline.py  homography_model.py  (+9 more)
src/target_o_meter/: asgi.py  checks.py  dev_auth_bypass.py  settings.py  urls.py  wsgi.py
target_o_meter/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  main.html  welcome.html
tests/acceptance/: conftest.py
tests/system/: conftest.py  test_auth_flow.py  test_dev_bypass.py  test_system_checks.py  test_templates.py
(+16 files in other folders)
