[project]
name = "module1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "gunicorn>=26.0.0",
    "langchain>=1.3.14",
    "langchain-google-genai>=4.3.1",
    "langchain-ollama>=1.1.0",
    "numpy>=2.5.1",
    "opencv-python-headless>=5.0.0.93",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scipy>=1.18.0",
    "whitenoise>=6.12.0",
]
