[project]
name = "module1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "gunicorn>=26.0.0",
    "langchain>=1.3.14",
    "langchain-google-genai>=4.3.1",
    "langchain-ollama>=1.1.0",
    "numpy>=2.5.1",
    "opencv-python-headless>=5.0.0.93",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scipy>=1.18.0",
    "whitenoise>=6.12.0",
]

# PEP 735 dependency groups (AGENTS.md §3). Managed via `uv`; do NOT use
# requirements.txt. These groups complement [project.dependencies], which holds
# the additional runtime libs (gunicorn, whitenoise, numpy/scipy/pillow, etc.)
# required by the existing settings and CV stack.
[dependency-groups]
default = [
    "django>=6.0.5",
    "django-ninja>=1.4.1",
    "django-q2>=1.8.0",
    "pydantic>=2.13.4",
    "langchain>=1.3.14",
    "opencv-python-headless>=5.0.0.93",
]
dev = [
    "ruff>=0.13.0",
    "import-linter>=2.5",
    "django-vite>=3.1.0",
]
test = [
    "pytest>=9.0.0",
    "pytest-django>=4.11.0",
    "pytest-bdd>=8.1.0",
]
system-test = [
    "httpx>=0.28.0",
    "playwright>=1.40.0",
]
