[project]
name = "module1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "gunicorn>=26.0.0",
    "langchain>=1.3.14",
    "langchain-google-genai>=4.3.1",
    "langchain-ollama>=1.1.0",
    "numpy>=2.5.1",
    "opencv-python-headless>=5.0.0.93",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scipy>=1.18.0",
    "whitenoise>=6.12.0",
]

# PEP 735 dependency groups (AGENTS.md §3). Managed via `uv`; do NOT use
# requirements.txt. These groups complement [project.dependencies], which holds
# the additional runtime libs (gunicorn, whitenoise, numpy/scipy/pillow, etc.)
# required by the existing settings and CV stack.
[dependency-groups]
default = [
    "django>=6.0.5",
    "django-ninja>=1.4.1",
    "django-q2>=1.8.0",
    "authlib>=1.6.6",
    "pydantic>=2.13.4",
    "langchain>=1.3.14",
    "opencv-python-headless>=5.0.0.93",
]
dev = [
    "ruff>=0.13.0",
    "import-linter>=2.5",
    "django-vite>=3.1.0",
]
test = [
    "pytest>=9.0.0",
    "pytest-django>=4.11.0",
    "pytest-bdd>=8.1.0",
]
system-test = [
    "httpx>=0.28.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.5.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.target_o_meter.settings"
pythonpath = ["."]
# 6.1: DEV suite runs by default (Auth0 bypassed); UAT is opt-in via -m uat +
# RUN_UAT=1. --strict-markers makes a typo'd marker a hard error.
addopts = ["--strict-markers", "--strict-config", "-m", "not uat"]
markers = [
    "dev: fast, Auth0-bypassed tests (default).",
    "uat: slow acceptance tests hitting REAL Auth0; skipped unless RUN_UAT=1.",
]

[tool.ruff]
# `cv/` is the frozen research sandbox (commit 76f6fc4) — reference-only,
# explicitly out-of-scope per plan §"What We're NOT Doing". Production code
# lives under `src/`. Exclude `cv/` from lint so the gate reflects maintained code.
exclude = ["cv/", ".venv/", "node_modules/"]
